[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Background" type="Panel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin" ]

[node name="InputTabContainer" type="TabContainer" parent="Background" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 33.0
margin_top = 58.0
margin_right = 989.0
margin_bottom = 484.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
tab_align = 0
tabs_visible = true

[node name="KeyboardMouseTab" type="Tabs" parent="Background/InputTabContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scrolling_enabled = true

[node name="KeyboardMouseTable" type="Tree" parent="Background/InputTabContainer/KeyboardMouseTab" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 946.0
margin_bottom = 387.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="GamepadTab" type="Tabs" parent="Background/InputTabContainer" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scrolling_enabled = true

[node name="GamepadTable" type="Tree" parent="Background/InputTabContainer/GamepadTab" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 946.0
margin_bottom = 388.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="InputTestTab" type="Tabs" parent="Background/InputTabContainer" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scrolling_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="RawOutputTitle" type="Label" parent="Background/InputTabContainer/InputTestTab" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 33.0
margin_top = 1.0
margin_right = 185.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Device Raw Input Log"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ActionOutputTitle2" type="Label" parent="Background/InputTabContainer/InputTestTab" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 525.0
margin_top = 1.0
margin_right = 685.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Action Pressed Input Log"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="RawOutputBackground" type="Panel" parent="Background/InputTabContainer/InputTestTab" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 35.0
margin_right = 424.0
margin_bottom = 362.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="RawOutputLabel" type="RichTextLabel" parent="Background/InputTabContainer/InputTestTab/RawOutputBackground" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 6.0
margin_right = 387.0
margin_bottom = 322.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = true
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
override_selected_font_color = false
_sections_unfolded = [ "BBCode" ]

[node name="ActionOutputBackground" type="Panel" parent="Background/InputTabContainer/InputTestTab" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 525.0
margin_top = 34.0
margin_right = 917.0
margin_bottom = 361.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="ActionOutputLabel" type="RichTextLabel" parent="Background/InputTabContainer/InputTestTab/ActionOutputBackground" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 5.0
margin_right = 387.0
margin_bottom = 322.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = true
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
override_selected_font_color = false
_sections_unfolded = [ "BBCode" ]

[node name="DefaultsButton" type="Button" parent="Background" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 38.0
margin_top = 515.0
margin_right = 183.0
margin_bottom = 557.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Use Defaults"
flat = false
align = 1

[node name="EditKeyButton" type="Button" parent="Background" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_top = 515.0
margin_right = 379.0
margin_bottom = 556.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Edit key"
flat = false
align = 1

[node name="ClearKeyButton" type="Button" parent="Background" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 437.0
margin_top = 517.0
margin_right = 576.0
margin_bottom = 557.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Clear key"
flat = false
align = 1

[node name="SaveButton" type="Button" parent="Background" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 635.0
margin_top = 516.0
margin_right = 784.0
margin_bottom = 560.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save"
flat = false
align = 1

[node name="ReloadButton" type="Button" parent="Background" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 838.0
margin_top = 518.0
margin_right = 989.0
margin_bottom = 561.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Reload"
flat = false
align = 1

[connection signal="tab_changed" from="Background/InputTabContainer" to="." method="_on_InputTabContainer_tab_changed"]

[connection signal="button_up" from="Background/DefaultsButton" to="." method="_on_DefaultsButton_button_up"]

[connection signal="button_up" from="Background/EditKeyButton" to="." method="_on_EditKeyButton_button_up"]

[connection signal="button_up" from="Background/ClearKeyButton" to="." method="_on_ClearKeyButton_button_up"]

[connection signal="button_up" from="Background/SaveButton" to="." method="_on_SaveButton_button_up"]

[connection signal="button_up" from="Background/ReloadButton" to="." method="_on_ReloadButton_button_up"]


